<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Soccer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="profile">档案</string>
    <string name="team">球队</string>
    <string name="match">比赛</string>
    <string name="reserve">订场</string>
    <string name="finance">财务</string>
    <string name="more">更多</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_team">TeamActivity</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="title_activity_reserve">ReserveActivity</string>
    <string name="title_activity_finance">FinanceActivity</string>
    <string name="quit_tips">再按点击退出</string>
</resources>
