<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView android:id="@+id/profile_tv"
        android:layout_width="150dip"
        android:layout_height="100dip"
        android:background="@drawable/btn_style_blue"
        android:layout_margin="5sp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/profile"
        android:clickable="true"
        android:onClick="onClick" />
    
    <TextView android:id="@+id/team_tv"
        android:layout_width="150dip"
        android:layout_height="100dip"
        android:layout_toRightOf="@id/profile_tv"
        android:layout_alignBaseline="@id/profile_tv"
        android:background="@drawable/btn_style_blue"
        android:layout_margin="5sp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/team"
        android:clickable="true"
        android:onClick="onClick" />
    
    <TextView android:id="@+id/match_tv"
        android:layout_width="150dip"
        android:layout_height="100dip"
        android:layout_below="@id/profile_tv"
        android:background="@drawable/btn_style_blue"
        android:layout_margin="5sp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/match"
        android:clickable="true"
        android:onClick="onClick" />
    
    <TextView android:id="@+id/reserve_tv"
        android:layout_width="150dip"
        android:layout_height="100dip"
        android:layout_alignBaseline="@id/match_tv"
        android:layout_toRightOf="@id/match_tv"
        android:background="@drawable/btn_style_blue"
        android:layout_margin="5sp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/reserve"
        android:clickable="true"
        android:onClick="onClick" />
    
    <TextView android:id="@+id/finance_tv"
        android:layout_width="150dip"
        android:layout_height="100dip"
        android:layout_below="@id/match_tv"
        android:background="@drawable/btn_style_blue"
        android:layout_margin="5sp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/finance"
        android:clickable="true"
        android:onClick="onClick" />

</RelativeLayout>
